[gd_scene load_steps=6 format=3 uid="uid://bm03m3qoaaydt"]

[ext_resource type="Texture2D" uid="uid://h6sb3gc0vdv0" path="res://Assets/Art/Characters/Zombie/zoimbie1_hold.png" id="1_5oli8"]
[ext_resource type="Script" path="res://Nodes/Enemies/Base/enemy_base.gd" id="1_35eg3"]
[ext_resource type="StyleBox" uid="uid://bo77sadlyh17s" path="res://Styles/ProgressBars/Health_ProgressBar_Background.tres" id="3_g1gmy"]
[ext_resource type="StyleBox" uid="uid://bbpl1t6d3rf2t" path="res://Styles/ProgressBars/Health_ProgressBar_Fill_Red.tres" id="4_fwoi4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w6cq5"]
radius = 23.0

[node name="EnemyBase" type="CharacterBody2D"]
collision_layer = 10
collision_mask = 2
script = ExtResource("1_35eg3")

[node name="View_Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("1_5oli8")

[node name="Move_CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_w6cq5")

[node name="HealthBar" type="Control" parent="."]
unique_name_in_owner = true
visible = false
z_index = 30
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="Health_ProgressBar" type="ProgressBar" parent="HealthBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.875
anchor_top = -0.5
anchor_right = 0.875
anchor_bottom = -0.3
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(35, 4)
size_flags_vertical = 4
theme_override_styles/background = ExtResource("3_g1gmy")
theme_override_styles/fill = ExtResource("4_fwoi4")
value = 75.0
show_percentage = false

[node name="DamageIndicatorContainer" type="Control" parent="."]
unique_name_in_owner = true
z_index = 31
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
